Fixed ribbon alignment issue for all resolution
git-svn-id: https://meridianww.cloudapp.net/svn/M4PL/trunk@364 80c1dc9e-45f0-9747-8a74-c6ecc499fc54

--- a/M4PL/M4PL.Apln/M4PL.Apln/Content/Common.css
+++ b/M4PL/M4PL.Apln/M4PL.Apln/Content/Common.css
@@ -14,6 +14,88 @@ a:focus, a:hover {
 .top-nav-collapse {
     background-color: #5bc0de !important;
 }
+.dxr-tabContent{
+        display: block;
+    width: 1645px;
+    position: static;
+    margin-left: -13px;
+    border-top-width: 1px;
+}
+@media  (min-width:1280px) and (max-width: 1366px)  {
+    .myMenuStyle {
+        height: 29% !important;
+    }
+
+     /*#splOverview {
+            margin-top: 5px  !important;
+    }*/
+
+}
+
+@media (min-width : 960px) and (max-width : 1024px) {
+  #splOverview {
+    margin-top: 42px !important;
+} 
+}
+
+
+
+@media only screen and (min-width : 1224px) {
+  #splOverview {
+    margin-top: -37px !important;
+}
+
+     .myMenuStyle {
+        height: 20% !important;
+    }
+}
+
+@media  (min-width: 1023px) and (max-width:1279px) {
+
+        #splOverview {
+            margin-top: 54px  !important;
+    }
+  
+   
+}
+
+
+@media  (min-width: 1250px) and (max-width:1264px) and (min-height:700px) and (max-height:800px) {
+
+        #splOverview {
+            margin-top: 54px  !important;
+    }
+  
+   
+}
+
+@media  (min-width: 1250px) and (max-width:1264px) and (max-height:1024px)  and (min-height:800px) {
+
+        #splOverview {
+            margin-top: 10px  !important;
+    }
+  
+   
+}
+
+
+@media (min-width: 1280px) and (max-width:1366px) , @media  (min-width: 1250px) and (max-width:1264px) and (min-height:700px) and (max-height:800px)
+{
+ #splOverview
+{
+      margin-top: 53px !important;
+}
+}
+
+@media (min-width: 1380px) and (max-width:1920px)
+{
+ #splOverview
+{
+      margin-top: 10px !important;
+}
+}
+
+
 
 @media (min-width: 768px) and (min-width: 1024px) {
     .navbar-collapse.collapse {
@@ -25,6 +107,7 @@ a:focus, a:hover {
         margin-right: -35px;
     }
 }
+
 
 @media (min-width: 1024px) {
     .forLapy {
@@ -651,7 +734,7 @@ header, footer, article, section, nav, figure, aside {
 }
 
 .dxm-main .dxm-horizontal .dxm-hovered {
-    background: none;
+    background: none;    border: none;
 }
 
 .dxrpCollapsed .dxrpcontent > .dxrpCW, .dxrpAW {
@@ -796,7 +879,7 @@ ul .dx, .dxm-content .dxm-hasText span .dx-vam {
 }
 
 .dxmLite_Office2010Black .dxm-main .dxm-hovered {
-    background: none;
+    background: none;    border: none;
 }
 /*Shared Ribbon*/
 
